--- a/Centene_OverPayment_IOModel_Prediction.ipynb
+++ b/Centene_OverPayment_IOModel_Prediction.ipynb
@@ -24,10 +24,10 @@
    "source": [
     "# pyodbc stuff for MS SQL Server Express\n",
     "driver='{SQL Server}'\n",
-    "server='10.56.98.147'\n",
+    "server='XX.XX.XX.XX'\n",
     "database='CDR_DM'\n",
     "username = 'DADevUser'\n",
-    "password = '$Dell2k14'\n",
+    "password = 'XXXXX'\n",
     "trusted_connection='yes'\n",
     "# pyodbc connection string\n",
     "connection_string = f'DRIVER={driver};SERVER={server};'\n",
